# data-structures-c

./: CMakeLists.txt  README.md
exercicios-casa/: trabalho-pratico-1.c
exercicios-sala/: arquivo_exemplo1.c  arquivo_exemplo2.c  arquivo_exemplo3.c  arquivo_exemplo6.c  arrays.c  fatorial.c  fatorial_fibonacci.c  fibonacci_com_tempo.c  funcao.c  gerador_de_vetor_aleatorio.c  insertion_sort.c  matrizes.c  retornando_array.c  selection_sort.c  struct.c  struct2.c
