cmake_minimum_required(VERSION 3.26)
project(c_projects C)

set(CMAKE_C_STANDARD 17)

add_executable(fatorial exercicios-sala/fatorial.c)
add_executable(fatorial_fibonacci exercicios-sala/fatorial_fibonacci.c)
add_executable(arrays exercicios-sala/arrays.c)
add_executable(matrizes exercicios-sala/matrizes.c)
add_executable(struct exercicios-sala/struct.c)
add_executable(funcao exercicios-sala/funcao.c)
add_executable(struct2 exercicios-sala/struct2.c)
add_executable(retornando_array exercicios-sala/retornando_array.c)