cmake_minimum_required(VERSION 3.26)
project(c_projects C)

set(CMAKE_C_STANDARD 17)

add_executable(fatorial exercicios-sala/fatorial.c)
add_executable(fatorial_fibonacci exercicios-sala/fatorial_fibonacci.c)
add_executable(arrays exercicios-sala/arrays.c)
add_executable(matrizes exercicios-sala/matrizes.c)
add_executable(struct exercicios-sala/struct.c)
add_executable(funcao exercicios-sala/funcao.c)
add_executable(struct2 exercicios-sala/struct2.c)
add_executable(retornando_array exercicios-sala/retornando_array.c)
add_executable(arquivo_exemplo1 exercicios-sala/arquivo_exemplo1.c)
add_executable(arquivo_exemplo2 exercicios-sala/arquivo_exemplo2.c)
add_executable(arquivo_exemplo3 exercicios-sala/arquivo_exemplo3.c)
add_executable(arquivo_exemplo4 exercicios-sala/arquivo_exemplo4.c)
add_executable(fibonacci_com_tempo exercicios-sala/fibonacci_com_tempo.c)
add_executable(gerador_de_vetor_aleatorio exercicios-sala/gerador_de_vetor_aleatorio.c)
add_executable(insertion_sort exercicios-sala/insertion_sort.c)
add_executable(trabalho-pratico-1 exercicios-casa/trabalho-pratico-1.c)
